--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-right">
                 <button class="menu-btn" id="menuBtn">☰</button>
                 <nav class="desktop-nav">
-                    <a href="#" class="nav-link">CREATE ACCOUNT</a>
+                    <a href="#" class="nav-link">ACCOUNT</a>
                     <a href="#" class="nav-link">SMART ROUTINE</a>
                     <a href="#" class="nav-link">ROUTINE ANALYSIS</a>
                 </nav>
@@ -38,7 +38,7 @@
         <div class="mobile-nav-content">
             <button class="close-btn" id="closeBtn">✖</button>
             <nav class="mobile-nav-links">
-                <a href="#" class="mobile-link" data-action="account">Account</a>
+                <a href="#" class="mobile-link" data-action="account">ACCOUNT</a>
                 <a href="#" class="mobile-link" data-action="dashboard">SMART ROUTINE</a>
                 <a href="#" class="mobile-link" data-action="analysis">ANALYSIS</a>
             </nav>
@@ -217,3 +217,4 @@
 </body>
 
 </html>
+
